2005-02-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Use %0.f iso %d to quiet gawk < 3.1.4 and
	mawk in fontforge (date) test.

2005-02-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/font.scm (make-century-schoolbook-tree): add NCS as
	font-family=roman. Add Luxi Sans as sans

2005-02-07  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/notation.itely: add warning about
	percent repeats and Voice contexts.

	* Documentation/user/lilypond-book.itely: clarified the
	necessity of dvips -u arguments.

2005-02-07  Erik Sandberg  <ersa9195@student.uu.se>

	* ChangeLog: Added a bunch of bug hunters.

2005-02-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (output-preview-framework): bugfix.

	* ly/chord-modifiers-init.ly (ignatzekExceptionMusic): use unicode
	o/ for chord modifier..

	* lily/general-scheme.cc (LY_DEFINE): new function ly:wide-char->utf-8.

	* lily/drum-note-performer.cc:  remove unused (thanks Michael
	Welsh Duggan). 

2005-02-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/changing-defaults.itely (Text encoding): Clarify.

	* ly/titling-init.ly: Do not also print intstrument in header on
	first page.  Do not print page number on first and only page.

2005-02-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/*.ly: remove old-relative everywhere

	* lily/music-sequence.cc (simultaneous_relative_callback): do
	what-if analysis on copy, not on original. Fixes old-relative
	compatibility.

	* scm/backend-library.scm (postscript->png): space before
	--verbose.
	
2005-02-05  Werner Lemberg  <wl@gnu.org>

	* mf/feta-autometric.mf (fet_beginchar): Check whether `feta_group'
	is defined.

	* mf/feta-alphabet.mf: Define `staffsize#'.
	Include `feta-params.mf'.
	s/staffheight/design_size/.

	* mf/feta-alphabet??.mf: s/staffheight/design_size/.

	* mf/feta-alphabet26.mf: Fix a serious bug (design size off by 8pt).

	* mf/feta-nummer-code.mf: Reformatted.