@@ -16,7 +16,7 @@ PACKAGE = @PACKAGE@
 package = @package@
 PACKAGE_NAME = @PACKAGE_NAME@
 
-prefix = $(DESTDIR)@prefix@
+prefix = @prefix@
 exec_prefix = @exec_prefix@
 
 builddir = @ugh_ugh_autoconf250_builddir@
