@@ -20,14 +20,14 @@ default: $(MO_FILES)
 
 local-install: $(MO_FILES)
 	for i in $(CATALOGS); do \
-	  $(INSTALL) -d $(localedir)/$$i/LC_MESSAGES; \
+	  $(INSTALL) -d $(DESTDIR)$(localedir)/$$i/LC_MESSAGES; \
 	  $(INSTALL) -m 644 $(outdir)/$$i.mo \
-	  $(localedir)/$$i/LC_MESSAGES/$(package).mo; \
+	  	     $(DESTDIR)$(localedir)/$$i/LC_MESSAGES/$(package).mo; \
 	done
 
 local-uninstall:
 	for i in $(CATALOGS); do \
-	  rm -f $(localedir)/$$i/LC_MESSAGES/$(package).mo; \
-	  rmdir $(localedir)/$$i/LC_MESSAGES || true; \
+	  rm -f $(DESTDIR)$(localedir)/$$i/LC_MESSAGES/$(package).mo; \
+	  rmdir $(DESTDIR)$(localedir)/$$i/LC_MESSAGES || true; \
 	done
 
