@@ -1,22 +1,22 @@
 
 local-install: $(LIBRARY)
 ifneq ($(strip $(INSTALL_HEADERS)),)
-	$(INSTALL) -d $(includedir)
-	$(INSTALL) $(INSTALL_HEADERS) $(includedir)
+	$(INSTALL) -d $(DESTDIR)$(includedir)
+	$(INSTALL) $(INSTALL_HEADERS) $(DESTDIR)$(includedir)
 endif
 ifeq ($(LIB_SUFFIX),.so)
-	$(INSTALL) -d $(libdir)
-	$(INSTALL) $(LIBRARY) $(libdir)/$(INSTALL_LIBRARY).$(VERSION)
-	ln -s $(LIB_PREFIX)intl$(LIB_SUFFIX).$(VERSION) $(libdir)/$(LIB_PREFIX)intl$(LIB_SUFFIX).$(MAJOR_VERSION)
-	ln -s $(LIB_PREFIX)intl$(LIB_SUFFIX).$(VERSION) $(libdir)/$(LIB_PREFIX)intl$(LIB_SUFFIX)
+	$(INSTALL) -d $(DESTDIR)$(libdir)
+	$(INSTALL) $(LIBRARY) $(DESTDIR)$(libdir)/$(INSTALL_LIBRARY).$(VERSION)
+	ln -s $(LIB_PREFIX)intl$(LIB_SUFFIX).$(VERSION) $(DESTDIR)$(libdir)/$(LIB_PREFIX)intl$(LIB_SUFFIX).$(MAJOR_VERSION)
+	ln -s $(LIB_PREFIX)intl$(LIB_SUFFIX).$(VERSION) $(DESTDIR)$(libdir)/$(LIB_PREFIX)intl$(LIB_SUFFIX)
 else
-	$(INSTALL) -d $(libdir)
-	$(INSTALL) $(LIBRARY) $(libdir)/$(INSTALL_LIBRARY)
+	$(INSTALL) -d $(DESTDIR)$(libdir)
+	$(INSTALL) $(LIBRARY) $(DESTDIR)$(libdir)/$(INSTALL_LIBRARY)
 endif
 
 local-uninstall:
 ifneq ($(strip $(INSTALL_HEADERS)),)
-	rm -f $(addprefix $(includedir)/, $(INSTALL_HEADERS))
+	rm -f $(addprefix $(DESTDIR)$(includedir)/, $(INSTALL_HEADERS))
 endif
-	rm -f $(libdir)/$(INSTALL_LIBRARY)
+	rm -f $(DESTDIR)$(libdir)/$(INSTALL_LIBRARY)
 
